syntax = "proto3";

package com.toutiao.melon.rpc;

option java_multiple_files = true;

message ManageJobRequestMetadata {
  enum RequestType {
    START_JOB = 0;
    STOP_JOB = 1;
    QUERY_RUNNING_JOB = 2;
  }

  RequestType request_type = 1;
  string job_name = 2;
}

message ManageJobRequest {
  oneof data {
    // First message is metadata then jar_bytes if needed
    ManageJobRequestMetadata metadata = 1;
    bytes jar_bytes = 2;
  }
}

message ManageJobResponse {
  string message = 1;
}

service ManageJob {
  rpc ManageJob (stream ManageJobRequest) returns (ManageJobResponse) {
  }
}

message ProvideJarRequest {
  string job_name = 1;
}

message ProvideJarResponse {
  oneof data {
    // Leading messages are jar_bytes then a message if needed
    bytes jar_bytes = 1;
    // Error message, should only be set when error occurs
    string message = 2;
  }
}

service ProvideJar {
  rpc ProvideJar (ProvideJarRequest) returns (stream ProvideJarResponse) {
  }
}
